# LevionArm

./: .clang-format  .gitignore  .gitmodules  README.md
joy_gui/: README.md  package.xml  setup.cfg  setup.py
joy_gui/joy_gui/: __init__.py  joint_velocity_gui.py  joint_velocity_publisher_gui.py  joystick_pad.py
levion_arm_calibration/: CMakeLists.txt  package.xml
levion_arm_calibration/config/: calibratioin_config.yaml
levion_arm_calibration/include/levion_arm_calibration/: calibration_manager.hpp  joint_limit_calibrator.hpp
levion_arm_calibration/src/: calibration_manager.cpp  joint_limit_calibrator.cpp
levion_arm_description/: CMakeLists.txt  package.xml
levion_arm_ros2_control/: CMakeLists.txt  package.xml
levion_arm_ros2_control/bringup/config/: ak80_8.controller.yaml  ak80_8_controller.yaml  levion_arm_controller.yaml  levion_arm_controllers.yaml
levion_arm_ros2_control/bringup/launch/: ak80_8.launch.py  leptrino_force_torque.launch.py  levion_arm.launch.py
settings/80-8-firmware/: AK80-8_HV2.1_FV1.1_BOOT+SERVOAPP+MITAPP_20240119.hex
settings/AK80-8-default/: AK80_8_V2.1_20230317.AppParams.AppParams.AppParams  AK80_8_V2.1_20230317.McParams.McParams.McParams
settings/right_elbow/: right_elbow.AppParams.AppParams  right_elbow.McParams.McParams
settings/right_shoulder/: right_shoulder.AppParams.AppParams  right_shoulder.McParams.McParams
test/test_motor_connection/: CMakeLists.txt  README.md
test/test_motor_connection/include/test_motor_connection/: test_can.hpp
test/test_motor_connection/src/: test_can.cpp
(+18 files in other folders)
